<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_margin="@dimen/DP_10"
        android:layout_height="@dimen/DP_60"
        android:hint="@string/name"
        android:id="@+id/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_margin="@dimen/DP_10"
        android:layout_height="@dimen/DP_60"
        android:hint="@string/mobile"
        android:maxLength="10"
        android:inputType="number"
        android:id="@+id/mobile"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_60"
        android:layout_margin="@dimen/DP_10"
        android:hint="@string/remark"
        android:id="@+id/remark"/>

    <Button
        android:layout_width="match_parent"
        android:layout_margin="@dimen/DP_10"
        android:text="@string/register"
        android:layout_height="@dimen/DP_60"
        android:background="@color/black"
        android:textColor="@color/white"
        android:id="@+id/report"/>

</LinearLayout>